--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,33 +16,75 @@
   },
   "dependencies": {
     "@expo/config-plugins": "^4.0.8",
-    "expo": "^44.0.0",
-    "expo-av": "~10.2.0",
-    "expo-barcode-scanner": "^11.2.1",
-    "expo-camera": "^12.1.2",
+    "@formatjs/intl-getcanonicallocales": "^1.8.0",
+    "@formatjs/intl-locale": "^2.4.41",
+    "@formatjs/intl-numberformat": "^7.2.6",
+    "@formatjs/intl-pluralrules": "^4.1.6",
+    "@intercom/intercom-react-native": "^1.1.1",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "^5.0.2",
+    "@react-native-firebase/app": "^14.2.2",
+    "@react-native-firebase/app-check": "^14.2.2",
+    "@react-native-firebase/auth": "^14.2.2",
+    "@react-native-firebase/firestore": "^14.2.2",
+    "@react-native-firebase/installations": "^14.2.2",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/material-top-tabs": "^6.1.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.4.0",
+    "@stripe/stripe-react-native": "0.2.2",
+    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
+    "babel-plugin-formatjs": "^10.3.12",
+    "config-plugin-react-native-intercom": "^1.0.0",
+    "country-calling-code": "^0.0.3",
+    "expo": "~43.0.2",
+    "expo-av": "~10.1.3",
+    "expo-barcode-scanner": "~11.1.2",
+    "expo-camera": "~12.0.3",
     "expo-community-flipper": "^43.0.5",
-    "expo-constants": "~13.0.1",
-    "expo-dev-client": "~0.8.4",
-    "expo-device": "~4.1.0",
-    "expo-localization": "~12.0.0",
-    "expo-location": "^14.0.2",
-    "expo-network": "~4.1.0",
-    "expo-notifications": "~0.14.0",
-    "expo-permissions": "~13.1.0",
-    "expo-speech": "~10.1.0",
-    "expo-status-bar": "~1.2.0",
+    "expo-constants": "~12.1.3",
+    "expo-dev-client": "^0.8.0",
+    "expo-device": "~4.0.3",
+    "expo-image-manipulator": "~10.1.2",
+    "expo-image-picker": "~11.0.3",
+    "expo-linking": "~2.4.2",
+    "expo-localization": "^11.0.0",
+    "expo-location": "~13.0.4",
+    "expo-network": "~4.0.3",
+    "expo-notifications": "~0.13.3",
+    "expo-permissions": "^13.0.3",
+    "expo-speech": "~10.0.3",
+    "expo-status-bar": "~1.1.0",
     "expo-updates": "~0.10.15",
+    "intl": "^1.2.5",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-devtools-core": "^4.22.1",
     "react-dom": "17.0.1",
+    "react-intl": "^5.23.0",
     "react-native": "0.64.3",
-    "react-native-flipper": "^0.125.0",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1",
+    "react-native-calendars": "^1.1276.0",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-dialog": "^9.2.0",
+    "react-native-esc-pos-printer": "^1.8.0",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-image-crop-picker": "^0.37.2",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-keyevent": "^0.2.8",
+    "react-native-maps": "^0.30.1",
+    "react-native-open-maps": "^0.4.0",
+    "react-native-pager-view": "^5.4.9",
+    "react-native-paper": "^4.11.1",
+    "react-native-pickers": "^2.0.0",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-screens": "^3.10.2",
+    "react-native-share": "^7.3.2",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-tab-view": "^3.1.1",
+    "react-native-table-component": "^1.2.1",
+    "react-native-toast-message": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
